2008-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Generate work buffer always;
	don't redisplay article for raw contents; remove plural articles stuff.

	* gnus-sum.el (gnus-summary-pipe-output): Pipe raw articles by symbolic
	prefix `r'; use gnus-summary-save-in-pipe directly instead of relying
	on gnus-summary-save-article; display results properly.

2008-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: No need to fbind ns-focus-frame.

2008-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Add optional argument `raw'.

2008-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Consider
	gnus-save-all-headers.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* gnus-util.el (ns-focus-frame): Remove declaration.
	(gnus-select-frame-set-input-focus): Undo previous change.  Treat ns
	like x.

2008-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* rfc2104.el (rfc2104-zero): Delete defconst.
	(rfc2104-hex-alist): Likewise.
	(rfc2104-hex-to-int): Delete func.
	(rfc2104-hexstring-to-bitstring): Likewise.
	(rfc2104-nybbles): New defconst.
	(rfc2104-hash): Rewrite for speed.

2008-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* tls.el (open-tls-stream): Make it work with the 2nd argument
	BUFFER that is a string but does not exist as a buffer object, as
	mentioned in the doc-string.

2008-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind ns-focus-frame for Emacs 21, 22, XEmacs 21.4, and
	SXEmacs.

2008-07-16  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (ns-focus-frame): Declare for compiler.

2008-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-save): Ignore gnus-visible-headers that is
	set as a group parameter.
	(gnus-summary-save-in-pipe): Work when it is called independently.
	(gnus-summary-pipe-to-muttprint): Don't modify
	gnus-summary-pipe-output-default-command.

2008-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>